<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hexagonal Minesweeper</string>
    <string name="item_continue">Continue</string>
    <string name="sub_item_continue">Returning to current game</string>  
    <string name="item_new">New game</string>
    <string name="sub_item_new_squ">Standard game</string>
    <string name="sub_item_new_hex">Hex-mode</string>        
    <string name="item_new_simple">Beginner</string>
    <string name="sub_item_new_simple">Field 9x9, 10 mines</string>
    <string name="item_new_medium">Intermediate</string>
    <string name="sub_item_new_medium">Field 16x16, 40 mines</string>     
    <string name="item_new_hard">Expert</string>
    <string name="sub_item_new_hard">Field 30x16, 99 mines</string> 
    <string name="item_new_own">Custom</string>
    <string name="sub_item_new_own">Game with custom settings</string>
    <string name="item_results">Records</string>
    <string name="sub_item_results">Display game records</string>    
    <string name="item_rules">Rules</string>
    <string name="sub_item_rules">Display game rules</string>
    <string name="item_return">Back</string>
    <string name="sub_item_return">Back to previous menu</string>
    <string name="item_exit">Exit</string> 
    <string name="sub_item_exit">Exit game</string>    
    <string name="field_width">Field width:</string>
    <string name="field_height">Field height:</string>
    <string name="mines_count">Mines:</string>
    <string name="button_to_game">Play on</string>
    <string name="button_clear_tab">Clear records</string>
    <string name="button_ok">OK</string>    
    <string name="button_cancel">Cancel</string>
    <string name="win_record">New time record:</string> 
    <string name="author">Yaroslav Volohov, 2012</string>                    
</resources>