<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/item_new_own"
            android:textColor="@color/FONT_COLOR"
            android:textSize="@dimen/EXTRA_BIG_FONT" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/border" >

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginTop="6dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:text="@string/field_width"
                        android:textColor="@color/FONT_COLOR"
                        android:textSize="@dimen/MEDIUM_FONT" />

                    <EditText
                        android:id="@+id/etFieldWidth"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border3"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/MEDIUM_FONT" >

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginTop="6dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:text="@string/field_height"
                        android:textColor="@color/FONT_COLOR"
                        android:textSize="@dimen/MEDIUM_FONT" />

                    <EditText
                        android:id="@+id/etFieldHeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border3"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/MEDIUM_FONT" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginRight="9dp"
                    android:layout_marginTop="6dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:text="@string/mines_count"
                        android:textColor="@color/FONT_COLOR"
                        android:textSize="@dimen/MEDIUM_FONT" />

                    <EditText
                        android:id="@+id/etFieldMines"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border3"
                        android:ems="10"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/MEDIUM_FONT" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp" >

        <Button
            android:id="@+id/btnToGame"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:onClick="onClick"
            android:text="@string/button_to_game"
            android:textSize="@dimen/MEDIUM_FONT" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:onClick="onClick"
            android:text="@string/button_cancel"
            android:textSize="@dimen/MEDIUM_FONT" />
    </TableRow>

</TableLayout>